--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </header>
             <div class="presentacion">
                 <p class="bienvenida">Bienvenidos</p>
-                <h2>Soy <span>Lucas Perez</span>, Desarrollador Web</h2>
+                <h2>Soy <span>Jorge Osorio</span>, Desarrollador Web</h2>
                 <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, </p>
                 <a href="#portfolio">Ir a Portafolio</a>
             </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
-            <h2>Hola, Soy <span>Lucas Perez</span> </h2>
+            <h2>Hola, Soy <span>Jorge Osorio</span> </h2>
             <h3>Desarrollador Web</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur reprehenderit voluptatibus blanditiis nulla adipisci iste fuga expedita, ea exercitationem dicta, similique rem, atque soluta recusandae ipsam autem. Sapiente, quo ducimus?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam a beatae natus.</p>
