Se añadio un hipervinculo para el proyecto 1 y se le modifico la imagen

--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto1.jpg" alt="">
+                <a href="https://jorgestivenosorio.github.io/Hyperblog/">
+                    <img src="img/proyecto_hyperblog.JPG" alt="">
+                </a>
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>Hyperblog</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
